--- a/style.css
+++ b/style.css
@@ -23,3 +23,13 @@ form{
     display: flex;
     align-items: center;
 }
+form input{
+    flex: 1;
+    height: 100%;
+    border: 0;
+    outline: 0;
+    background: transparent;
+    color: #fff;
+    font-size: 18px;
+    padding: 0 30px;
+}
