--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ form{
     background: #434989;
     display: flex;
     align-items: center;
+    border-radius: 8px;
 }
 form input{
     flex: 1;
@@ -32,4 +33,20 @@ form input{
     color: #fff;
     font-size: 18px;
     padding: 0 30px;
+}
+form button{
+    padding: 0 40px;
+    height: 100%;
+    background: #ff3929;
+    color: #fff;
+    font-size: 18px;
+    border: 0;
+    outline: 0;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    cursor: pointer;
+}
+::placeholder{
+    color: #fff;
+    font-size: 18px;
 }
